# air

./: LICENSE  README.md  air.cabal  air.cfg
src/Air/: Cli.hs  Domain.hs  Logger.hs  Main.hs  Persistence.hs  Test.hs
src/Air/Cli/: Interpretation.hs  Parser.hs  Shell.hs
test/Air/: PersistentTest.hs  TestMain.hs
